--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,6 +1,7 @@
 page-welcome {
     #welcome {
         background: color($colors, energy);
+        color: color($colors, primary);
         h1 {
             font-size: 52px;
             margin-top: 50px
