--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,7 +21,7 @@ $app-direction: ltr;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
-$colors: ( primary : #488aff, secondary : #32db64, danger : #f53d3d, light : #f4f4f4, dark : #222);
+// $colors: ( primary : #488aff, secondary : #32db64, danger : #f53d3d, light : #f4f4f4, dark : #222);
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
@@ -47,5 +47,6 @@ $colors: ( primary : #488aff, secondary : #32db64, danger : #f53d3d, light : #f4
 // --------------------------------------------------
 @import "roboto";
 @import "noto-sans";
-$colors: ( primary : #2A2C43, secondary : #677077, lightprimary : #B5B5B7, light : #f4f4f4, dark : #222, energy : #f2b632);
+// $colors: ( primary : #2A2C43, secondary : #677077, lightprimary : #B5B5B7, light : #f4f4f4, dark : #222, energy : #f2b632);
+$colors: ( primary : #192D55, secondary : #677077, lightprimary : #91C896, light : #f4f4f4, dark : #222, energy : #FFC300);
 $toolbar-background: color($colors, primary);
